Fix bottom scrollbar

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0px;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .wrap{
@@ -105,6 +107,7 @@ section ul li p{
     height: 15vh;
     width: 20vw;
     padding: 5px;
+    text-align: center;
 }
 
 @media only screen and (max-width: 50em) {
